--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,10 +2,18 @@
     margin: 0;
     padding: 0; 
     box-sizing: border-box;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.young-serif-regular {
+    font-family: "Young Serif", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  
+
 body {
+    font-size: large;
     background-color: hsl(30, 54%, 90%);
     width: 100vw;
     height: 100vh;
@@ -36,7 +44,7 @@ h1 {
 }
 
 p {
-    font-size: 16px;
+    font-size: large;
 }
 
 .first-section {
@@ -91,6 +99,7 @@ table {
     margin-top: 1rem;
     border-collapse: collapse; 
     width: 100%; 
+    font-size: 30px;
   }
   
   td {
